# usagi_firmware

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  STM32G431XX_FLASH.ld  usagi_firmware.ioc
Application/: CMakeLists.txt
Application/Inc/: actuator_command.h  actuator_output.h  app_memory.h  canopen_task.h  cyphal_node.h  cyphal_publish.hpp  cyphal_transport.hpp  dsdl_embedded.h  dsdl_runtime.h  led_blink.h  led_blink_node.h  motor_control.h  servo_control.h
Application/OD/: OD.c  OD.h  usagi_profile.eds  usagi_profile.md  usagi_profile.xdd
Application/Src/: actuator_command.c  actuator_command.cpp  actuator_output.c  app_memory.c  cyphal_node.c  cyphal_node.cpp  cyphal_transport.cpp  dsdl_runtime.c  led_blink_node.c
Application/Src/tasks/: canopen_task.c  led_blink.c  motor_control.c  servo_control.c
Application/cmake/: embed_dsdl.py  generate_dsdl_types.cmake
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_it.h  tim.h
Core/Src/: fdcan.c  gpio.c  main.c  stm32g4xx_it.c  tim.c
cmake/stm32cubemx/: CMakeLists.txt
